Fixed header overflow.

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -10,6 +10,13 @@
   min-height: 100vh;
 }
 
+.header {
+  background: $background-color;
+  z-index: 999;
+  position: fixed;
+  width: 100%;
+}
+
 .main {
   display:flex;
   margin-top: 5.5rem;
